# AI_Econ_daioe_months_v2

./: .dockerignore  .gitignore  Dockerfile  README.md  _brand.yml  app.py  main.py  pyproject.toml  scb_months_15_to_25.ipynb
.antigravitycli/: 20b5fd0e-1185-4b66-bb6b-c913abcad09b.json
.github/workflows/: 03_development_to_main.yml  sync_to_hub.yml
css/: ticker.css
data/: scb_months.parquet  scb_months_lvl1.parquet
md_files/: about.md  intro.md
src/: calcs.py  constants.py  data.py  setup.py  utils.py  visuals.py
