[project]
name = "ai-econ-daioe-months-v2"
version = "0.1.0"
description = "Shiny dashboard visualising monthly Swedish employment trends enriched with DAIOE AI-exposure scores"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faicons>=0.2.2",
    "great-tables>=0.17.0",
    "kaleido>=0.2.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "shiny[theme]>=1.6.0",
    "shinywidgets>=0.8.0",
]

[tool.ruff.lint]
ignore = [
    "A004",    # Shiny Express intentionally shadows the `input` builtin
    "SIM117",  # Shiny UI DSL requires nested `with` blocks; cannot be flattened
    "PLC0415", # Deferred imports are intentional for performance (heavy dependencies)
    "PLW0603", # Module-level flag for kaleido singleton is intentional
]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
reportArgumentType = false

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
